test/compflags/AddNonDirToModulePath.1.good
warning: The path 'nonexistentdir' does not exist and will excluded from the module search path
AddNonDirToModulePath.chpl:1: error: cannot find module named 'UsefulModule'
